Change np exposure language

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,227 @@
 
+@misc{unep-wcmc_and_iucn_protected_2025,
+	title = {Protected Planet: The World Database on Protected Areas ({WDPA})},
+	url = {https://www.protectedplanet.net/},
+	abstract = {Protected Planet is the online interface for the World Database on Protected Areas ({WDPA}), and the most comprehensive global database on terrestrial and marine protected areas.},
+	author = {{UNEP-WCMC and IUCN}},
+	urldate = {2025-06-15},
+	date = {2025},
+	note = {Publication Title: Protected Planet},
+}
+
+@report{monterey_bay_aquarium_monterey_2025,
+	title = {Monterey Bay Aquarium Seafood Watch},
+	author = {{Monterey Bay Aquarium}},
+	url = {https://www.seafoodwatch.org/seafood-recommendations/standards-revision},
+	institution = {Monterey Bay Aquarium},
+	urldate = {2025-06-27},
+	date = {2025},
+}
+
+@misc{united_nations_fao_2025,
+	title = {{FAO} Fisheries \& Aquaculture - Fishery Statistical Collections - Global Aquaculture Production},
+	url = {https://www.fao.org/fishery/en/collection/aquaculture?lang=en},
+	author = {{United Nations}},
+	urldate = {2025-06-23},
+	date = {2025},
+}
+
+@misc{ram_legacy_stock_assessment_database_ram_2025,
+	title = {{RAM} Legacy Stock Assessment Database v4.66},
+	rights = {Creative Commons Attribution 4.0 International, Open Access},
+	url = {ramlegacy.org},
+	abstract = {{RAM} Legacy Stock Assessment Database v4.66},
+	author = {{RAM Legacy Stock Assessment Database}},
+	urldate = {2025-06-26},
+	date = {2025},
+	doi = {10.5281/zenodo.14043030},
+}
+
+@misc{un-fao_fao_2025,
+	title = {{FAO} Fisheries \& Aquaculture - Fishery Statistical Collections - Fishery Commodities and Trade},
+	url = {https://www.fao.org/fishery/en/collection/global_commodity_prod},
+	author = {{UN-FAO}},
+	urldate = {2025-07-14},
+	date = {2025},
+	note = {Publication Title: {FAO} Commodities data},
+}
+
+@misc{international_labour_organization_average_2025,
+	title = {Average monthly earnings of employees by sex and economic activity - Annual},
+	url = {https://rshiny.ilo.org/dataexplorer46/?lang=en&id=EAR_4MTH_SEX_ECO_CUR_NB_A},
+	author = {{International Labour Organization}},
+	urldate = {2025-08-27},
+	date = {2025-08-27},
+}
+
+@misc{organisation_for_economic_co-operation_and_development_oecd_annual_2025,
+	title = {Annual Purchasing Parities and exchange rates},
+	url = {https://data-explorer.oecd.org/vis?lc=en&tm=ppp&pg=0&snb=111&vw=ov&df[ds]=dsDisseminateFinalDMZ&df[id]=DSD_NAMAIN10%40DF_TABLE4&df[ag]=OECD.SDD.NAD&df[vs]=1.0&dq=A.AUS%2BAUT%2BBEL%2BCAN%2BCHL%2BCOL%2BCRI%2BCZE%2BDNK%2BEST%2BFIN%2BFRA%2BDEU%2BGRC%2BHUN%2BISL%2BIRL%2BISR%2BITA%2BJPN%2BKOR%2BLVA%2BLTU%2BLUX%2BMEX%2BNLD%2BNZL%2BNOR%2BPOL%2BPRT%2BSVK%2BSVN%2BESP%2BSWE%2BCHE%2BTUR%2BGBR%2BUSA...PPP_B1GQ.......&pd=2009%2C2020&to[TIME_PERIOD]=false},
+	author = {{Organisation for Economic Co-operation and Development (OECD)}},
+	urldate = {2025-08-27},
+	date = {2025-07-30},
+}
+
+@online{kauffman_worldwide_2024,
+	title = {The Worldwide Governance Indicators : Methodology and 2024 Update},
+	url = {https://documents.worldbank.org/en/publication/documents-reports/documentdetail/099005210162424110},
+	shorttitle = {The Worldwide Governance Indicators},
+	abstract = {The Worldwide Governance Indicators : Methodology and 2024 Update (English)},
+	titleaddon = {World Bank},
+	type = {Text/{HTML}},
+	author = {Kauffman, Daniel and Kraay, Aart C.},
+	urldate = {2025-07-29},
+	date = {2024},
+	langid = {english},
+}
+
+@misc{unwto_united_2024,
+	title = {United Nations World Tourism Organization ({UNWTO}) 145 Key Tourism Statistics: Domestic Accomodations},
+	url = {https://www.unwto.org/tourism-statistics/key-tourism-statistics},
+	abstract = {Data are collected from countries by {UNWTO} through a series of yearly questionnaires that are in line with the International Recommendations for Tourism Statistics ({IRTS} 2008) standard led by {UNWTO} and approved by the United Nations.},
+	author = {{UNWTO}},
+	urldate = {2025-08-16},
+	date = {2024},
+	langid = {english},
+}
+
+@misc{unwto_united_2024-1,
+	title = {United Nations World Tourism Organization ({UNWTO}) 145 Key Tourism Statistics: Inbound Tourism - Total arrivals (International and Domestic)},
+	url = {https://www.unwto.org/tourism-statistics/key-tourism-statistics},
+	abstract = {Data are collected from countries by {UNWTO} through a series of yearly questionnaires that are in line with the International Recommendations for Tourism Statistics ({IRTS} 2008) standard led by {UNWTO} and approved by the United Nations.},
+	author = {{UNWTO}},
+	urldate = {2025-08-16},
+	date = {2024},
+	langid = {english},
+}
+
+@misc{world_bank_group_labor_2025,
+	title = {Labor force, total},
+	url = {https://data.worldbank.org/indicator/SL.TLF.TOTL.IN},
+	author = {{World Bank Group}},
+	urldate = {2025-08-07},
+	date = {2025-07-01},
+}
+
+@online{world_travel_and_tourism_center_travel_2024,
+	title = {Travel \& Tourism Economic Impact Research ({EIR})},
+	author = {{World Travel and Tourism Council}},
+	url = {https://wttc.org/research/economic-impact},
+	abstract = {Explore the economic impact of travel \& tourism with {WTTC}'s comprehensive research and data-driven insights, revealing key trends and future forecasts.},
+	urldate = {2025-08-29},
+	date = {2024},
+	langid = {english},
+}
+
+@misc{world_bank_group_gdp_2025,
+	title = {{GDP} (constant 2015 {US}\$)},
+	url = {https://data.worldbank.org/indicator/NY.GDP.MKTP.KD},
+	author = {{World Bank Group}},
+	urldate = {2025-08-24},
+	date = {2025},
+}
+
+@online{international_monetary_fund_international_2025,
+	title = {International Monetary Fund World Economic Output},
+	author = {{International Monetary Fund}},
+	url = {https://data.imf.org/en/Data-Explorer?datasetUrn=IMF.RES:WEO(6.0.0)},
+	titleaddon = {Gross Domestic Product ({GDP}), current prices, {US} Dollar},
+	urldate = {2025-08-29},
+	date = {2025-04-22},
+}
+
+@misc{organisation_for_economic_co-operation_and_development_oecd_employment_2025,
+	title = {Employment in fisheries, aquaculture, and processing},
+	url = {https://data-explorer.oecd.org/vis?fs[0]=Topic%2C1%7CAgriculture%20and%20fisheries%23AGR%23%7CFisheries%20and%20aquaculture%23AGR_FSA%23&pg=0&fc=Topic&bp=true&snb=6&vw=ov&df[ds]=dsDisseminateFinalDMZ&df[id]=DSD_FISH_EMP%40DF_FISH_EMPL&df[ag]=OECD.TAD.ARP&df[vs]=1.0&dq=.A...._T._T&pd=2009%2C&to[TIME_PERIOD]=false&ly[cl]=TIME_PERIOD&ly[rs]=REF_AREA&ly[rw]=DOMAIN},
+	author = {{Organisation for Economic Co-operation and Development (OECD)}},
+	urldate = {2025-08-11},
+	date = {2025-03-10},
+}
+
+@report{food_and_agriculture_organization_of_the_united_nations_fishery_2024,
+	title = {Fishery and Aquaculture Statistics Yearbook 2021},
+	url = {https://doi.org/10.4060/cc9523en},
+	pages = {232},
+	author = {{Food and Agriculture Organization of the United Nations}},
+	urldate = {2025-08-25},
+	date = {2024},
+}
+
+@misc{international_labour_organization_employment_2025,
+	title = {Employment by sex, age, and economic activity (thousands) - Annual},
+	url = {https://rshiny.ilo.org/dataexplorer46/?lang=en&id=EAR_4MTH_SEX_ECO_CUR_NB_A},
+	author = {{International Labour Organization}},
+	urldate = {2025-08-26},
+	date = {2025-08-29},
+}
+
+@misc{united_nations_fao_2025-1,
+	title = {{FAO} Fisheries \& Aquaculture - Fishery Statistical Collections - Global Capture Production},
+	url = {https://www.fao.org/fishery/en/collection/capture?lang=en},
+	author = {{United Nations}},
+	urldate = {2025-08-08},
+	date = {2025},
+}
+
+@article{melnychuk_reconstruction_2017,
+	title = {Reconstruction of global ex-vessel prices of fished species},
+	volume = {74},
+	issn = {1054-3139},
+	url = {https://doi.org/10.1093/icesjms/fsw169},
+	doi = {10.1093/icesjms/fsw169},
+	abstract = {Economic dimensions of global fishery analyses are often limited by unavailable or inconsistent ex-vessel price data from the world’s fishing nations. We describe a novel method for estimating ex-vessel price time series for individual species by converting export prices of fishery commodities into ex-vessel prices and pairing these with species. The method relies exclusively on global, publicly-available data from the Food and Agricultural Organization of the United Nations ({FAO}). National datasets of ex-vessel prices are not used as inputs for the method, but comparisons of reconstructed ex-vessel prices with actual prices from national datasets showed strong correspondence. Correlation coefficients for paired reconstructed prices and actual prices of the same species were typically between 0.60 and 0.75 annually in the past two decades. There was a tendency for reconstructed prices to be less variable than actual prices, over-estimating actual prices at low values of actual prices and under-estimating actual prices at high values, likely the result of incomplete price transmission or assigning a given price time series to multiple species. However, there was no evidence of overall bias between reconstructed prices and actual prices, and correlations were strongest for comparisons involving multiple taxonomic groups. The method described carries advantages of global comprehensiveness and consistency across countries in reconstructed ex-vessel prices, reflecting the comprehensiveness and consistency of export price information. The method described links to species from the global {FAO} landings database, but can be modified to pair with other species lists or to focus on specific regions or countries. Data tables and source code are publicly available and ex-vessel price estimates can be updated annually following annual releases of the {FAO} fishery commodities database.},
+	pages = {121--133},
+	number = {1},
+	journaltitle = {{ICES} Journal of Marine Science},
+	shortjournal = {{ICES} J Mar Sci},
+	author = {Melnychuk, Michael C. and Clavelle, Tyler and Owashi, Brandon and Strauss, Kent},
+	urldate = {2025-08-29},
+	date = {2017-01-01},
+}
+
+@misc{birdlife_international_and_handbook_of_the_birds_of_the_world_birdlife_2025,
+	title = {{BirdLife} International and Handbook of the Birds of the World (2024) Bird species distribution maps of the world. Version 2024.2.},
+	url = {http://datazone.birdlife.org/species/requestdis},
+	publisher = {{BirdLife} International},
+	author = {{BirdLife International and Handbook of the Birds of the World}},
+	urldate = {2025-07-02},
+	date = {2025-02-27},
+}
+
+@misc{iucn_spatial_2025,
+	title = {Spatial data - {IUCN} Red List of Threatened Species},
+	url = {https://www.iucnredlist.org/resources/spatial-data-download},
+	abstract = {Established in 1964, the {IUCN} Red List of Threatened Species has evolved to become the world’s most comprehensive information source on the global conservation status of animal, fungi and plant species.},
+	author = {{IUCN}},
+	urldate = {2025-07-15},
+	date = {2025-03-27},
+	note = {Publication Title: {IUCN} Red List of Threatened Species},
+}
+
+@misc{lebakula_ornl_2024,
+	title = {{ORNL} {LandScan} Viewer - Oak Ridge National Laboratory {LandScan} Silver Edition},
+	url = {https://landscan.ornl.gov/citations},
+	author = {Lebakula, V. and Epting, J. and Moehl, J. and Stipek, C. and Adams, D. and Reith, A. and Kaufman, J. and Gonzales, J. and Reynolds, B. and Basford, S. and Martin, A. and Buck, W. and Faxon, A and Cunningham, A. and Roy, A. and Barbose, Z. and Massaro, J. and Walters, S. and Woody, C. and Urban, M.},
+	urldate = {2025-08-29},
+	date = {2024},
+}
+
+@misc{united_nations_department_of_economic_and_social_affairs_population_division_world_2024,
+	title = {World Population Prospects 2024},
+	url = {https://population.un.org/wpp/downloads?folder=Standard%20Projections&group=Most%20used},
+	author = {{United Nations, Department of Economic and Social Affairs, Population Division}},
+	urldate = {2025-06-23},
+	date = {2024},
+}
+
+@misc{fao_fisheries_and_aquaculture_department_fao_2025,
+	title = {{FAO} Fisheries \& Aquaculture - Global Aquatic Trade Statistics},
+	url = {https://www.fao.org/fishery/statistics-query/en/trade},
+	author = {{FAO Fisheries and Aquaculture Department}},
+	urldate = {2025-08-07},
+	date = {2025-06-30},
+}
+
 @article{mcnutt2014reproducibility,
 	title = {Reproducibility},
 	volume = {343},
