--- a/goals/goal-models-data.qmd
+++ b/goals/goal-models-data.qmd
@@ -835,9 +835,9 @@ $$
 
 where ${E_c}$ is the exposure term and ${R_c}$ is the risk term for ornamentals.
 
-The exposure term, $E_c$, is the ln-transformed intensity of harvest for ornamental fish calculated as tonnes of harvest per km^2^ of coral and rocky reef, relative to the global maximum. We ln transformed the harvest intensity scores because the distribution of values was highly skewed; because we do not know the true threshold of sustainable harvest, nearly all values would be considered highly sustainable without the log transformation. To estimate rocky reef extent area (km^2^) we used data from Halpern et al. (2008) [@halpern2008global], which assumes rocky reef habitat exists in all cells within 1 km of shore. Coral extent area (km^2^) are from UNEP-WCMC et al. (2018) [@unep-wcmc2018global].
+The exposure term, $E_c$, is the intensity of harvest for ornamental fish calculated as tonnes of harvest per km2 of coral and rocky reef. This value is scaled by the global 95th quantile of the previous 10 years. We scale the harvest because the distribution of values is highly skewed; thus, because we do not know the true threshold of sustainable harvest, nearly all values would be considered highly sustainable otherwise. To estimate rocky reef extent area (km2) we used data from Halpern et al. (2008) ([Halpern et al. 2008](https://ohi-science.org/ohi-methods/goals/goal-models-data.html#ref-halpern2008global)), which assumes rocky reef habitat exists in all cells within 1 km of shore. Coral extent area (km2) are from UNEP-WCMC et al. (2018) ([UNEP-WCMC et al. 2018](https://ohi-science.org/ohi-methods/goals/goal-models-data.html#ref-unep-wcmc2018global)).
 
-The risk term, $R_c$, is based on whether ornamental fishing has unsustainable harvest practices. In specific, we used the intensity of cyanide and dynamite fishing as a proxy. Risk for ornamental fish was set based on assessments of cyanide or dynamite fishing by Reefs at Risk Revisited (www.wri.org/publication/reefs-at-risk-revisited) under the assumption that most ornamental fishes are harvested from coral reefs.
+The risk term, $R_c$, is based on whether ornamental fishing has unsustainable harvest practices. In specific, we used the intensity of cyanide and dynamite fishing as a proxy. Risk for ornamental fish was set based on assessments of cyanide or dynamite fishing by [Reefs at Risk Revisited](www.wri.org/publication/reefs-at-risk-revisited) under the assumption that most ornamental fishes are harvested from coral reefs.
 
 For seaweed commodity sustainability, we used the mariculture sustainability scores represented in the Monterey Bay Aquarium Seafood Watch aquaculture recommendations [@monterey_bay_aquarium_monterey_2025]. Ten mariculture practice criteria from the Monterey Bay Aquarium Seafood Watch Aquaculture Recommendations contributed to the sustainability of mariculture (data quality, effluent, habitat risk, chemical use, feed, escapes, disease, source of stock, predator and wildlife mortalities, and escape of secondary species). These criteria represent the internal mariculture practices with the potential to affect the long term sustainability of the mariculture system. Scores for each assessment criterion were aggregated and averaged. All country average scores were then rescaled from 0 to 1 using the maximum possible raw SFW score of 10 and minimum of 1. The sustainability score for seaweeds in the Seafood Watch recommendations was a global score, 0.79, which was applied to the seaweed harvest. Seaweed is widely regarded as a very sustainable aquaculture harvest, however, it does poorly on 3 of the 10 criteria that Seafood Watch uses, bringing its average down to 0.79. In specific, it scores poorly on the data quality (having robust and up-to-date information on production practices and their impacts available for analysis), escapes (preventing population-level impacts to wild species or other ecosystem-level impacts from farm escapes), and habitat (maintaining the functionality of ecological valuable habitat) criteria.
 
