Update species condition subgoal citations.

--- a/docs/references.bib
+++ b/docs/references.bib
@@ -13433,3 +13433,11 @@ ftp://sidads.colorado.edu/pub/DATASETS/nsidc0051\_gsfc\_nasateam\_seaice/final-g
 	author = {Chau, T.T.T. and {Marion Gehlen} and {Frédéric Chevallier}},
 	year = {2022},
 }
+
+@misc{iucn_iucn_2025,
+	title = {The {IUCN} Red List of Threatened Species. Version 2025-1.},
+	url = {http://www.iucnredlist.org/},
+	author = {{IUCN}},
+	urldate = {2025-07-15},
+	date = {2025-03-27},
+}
