--- a/data-layers/data-layer-descriptions.qmd
+++ b/data-layers/data-layer-descriptions.qmd
@@ -629,11 +629,9 @@ Sea-ice condition was calculated using sea-ice concentrations from the USA Natio
 
 See **`hab_softbottom_extent`** layer for more information.
 
-Soft bottom subtidal habitat condition was estimated using apparent fishing effort with demersal destructive gear types from Global Fishing Watch [@2022global]. This data includes the apparent hours of trawling and dredging on a global scale at a 0.01 degree resolution. Global Fishing Watch combines all trawling together, so we subset annual trawling raster to just reflect bottom trawling by multiplying the annual trawling rasters by the respective annual rasters for tonnes of fisheries harvest for marine species caught with the same gear types [@watson2019global]. This fisheries harvest data serves as a proxy for the proportion of bottom trawling to mid-water trawling at each location. The annual fisheries catch rasters come with a 0.5 degree resolution and were partially composed of missing values, so it was interpolated and up-sampled to 0.01 degree resolution before it was used to subset the trawling data.
+Soft bottom subtidal habitat condition was calculated using data from the Global Fishing Effort Model Data and Shiny App [@clawson_global_2025]. This data spatially allocated industrial fishing effort based off multiple data sources, and we filtered for gear type "Trawl_Bottom" prior to downloading. This data includes active fishing hours recorded at the 1 degree pixel resolution. 
 
-We spatially standardized the fishing effort by soft bottom habitat. We first summed rasters that represent several different types of soft bottom habitat, such as soft shelfs, sediment, and benthic mud. These rasters were sourced from Halpern et al. [-@halpern2015spatial]. We accounted for error in the soft bottom habitat labels by aggregating the cells and deriving a proportion of the soft bottom habitat over that larger area. We multiplied this soft bottom habitat raster by the fishing effort to subset it to just the demersal fishing that occurred on soft bottom habitat, while also maintaining the soft bottom habitat that is undisturbed to assign high scores to regions that are not destructive. The annual destructive fishing effort was assigned to each OHI region by spatially extracting the effort that intersected the regional EEZ polygons.
-
-Because the distribution of fishing effort density values for each region was extremely skewed, we took transformed them by taking the natural log using $log(X+1)$ and then rescaled the values by dividing by the 95th quantile of density across all years and regions. Any rescaled density value greater than 1.0 was capped at 1.0. Condition was then calculated as one minus the rescaled fishing effort density for each year and region. 
+Because the distribution of fishing effort values for each region was extremely skewed, we took transformed them by taking the natural log using $log(X+1)$ of fishing hours divided by pixel area and then rescaled the values by dividing by the 99.9th quantile of density for the 2010 data. Any rescaled density value greater than 1.0 was capped at 1.0. Condition was then calculated as one minus the rescaled fishing effort density for each year and region. 
  
 #### Units {-} 
  proportion
@@ -781,7 +779,7 @@ Sea-ice extent area (km^2^) was calculated using sea-ice concentrations from the
 
 Softbottom data is one of the variables in the habitat goal and the inverse is a habitat destruction pressure.
 
-Softbottom extent data is from Halpern et al. [-@halpern2015spatial], which provides 5 different spatial files that represent soft bottom habitat, such as soft sea shelfs, sediment, and benthic mud. These files' native resolution is approximately 934 x 934 meters.
+Softbottom extent data is from Clawson et al. [-@clawson_global_2025] at 1 degree resolution.
 
 #### Units {-} 
  km2
@@ -858,7 +856,7 @@ To summarize at the OHI region scale, the mean value of the raster cells within 
 ## IUCN extinction risk 
 #### [ico_spp_iucn_status](https://github.com/OHI-Science/ohi-global/tree/draft/eez/layers/ico_spp_iucn_status.csv) {-} 
 
-This data layer provides the risk category and the year the species was assessed from the IUCN Red List of Threatened Species ([http://www.iucnredlist.org/](http://www.iucnredlist.org/)) [@iucn2024] for the iconic species in each region. Regionally specific IUCN risk category data for *subpopulations* are included where available. Trend calculations are based on the change in each species' IUCN risk category over time, based upon past and current IUCN assessments.
+This data layer provides the risk category and the year the species was assessed from the IUCN Red List of Threatened Species ([http://www.iucnredlist.org/](http://www.iucnredlist.org/)) [@iucn_iucn_2025] for the iconic species in each region. Regionally specific IUCN risk category data for *subpopulations* are included where available. Trend calculations are based on the change in each species' IUCN risk category over time, based upon past and current IUCN assessments.
 
 OHI defines iconic species as those relevant to local cultural identity through the species’ relationship to traditional activities such as fishing, hunting, commerce or involvement in local ethnic or religious practices; and species with locally-recognized aesthetic value (e.g., touristic attractions/common artistic subjects such as whales). Habitat forming species are excluded in this definition of iconic species. The OHI global iconic species list combines three species lists from WWF Global: global priorities, regional and local priorities, and flagship species. It also incorporates culturally important species [@garcia2023]. The criteria for including species on these lists are consistent with the OHI’s definition of iconic species. 
 
@@ -933,10 +931,10 @@ Jobs includes yearly data for commercial fishing, mariculture, marine mammal wat
 Percent employment during the current status year for each sector/region is calculated as (1 - percent unemployment)*total labor force (World Bank).  Jobs data for the livelihoods subgoal were adjusted by dividing by the percent employment in the corresponding year.
 
 #### Commercial fishing
-Data are from the United Nations Food and Agriculture Organization (FAO) Fisheries and Aquaculture Department which provides a Global Number of Fishers dataset ( [http://www.fao.org/fishery/statistics/global-fishers/en](http://www.fao.org/fishery/statistics/global-fishers/en.)). The data include yearly total numbers of employees in commercial fishing, subsistence fishing, and aquaculture (land- and ocean-based combined) in more than 160 countries. The dataset includes the following occupational categories: aquatic-life cultivation, inland waters fishing, marine coastal waters fishing, marine deepsea waters fishing, subsistence and unspecified. We omitted jobs with an unspecified category to avoid overestimating employment for marine fishing or aquaculture. We omitted jobs in the subsistence category since subsistence opportunities are captured by the artisanal fishing opportunity goal and in the aquatic-life cultivation category since that represents a distinct sector (see mariculture below). For commercial fishing, we eliminated inland waters fishing and summed marine coastal waters and marine deep-sea waters fishing for each country in each year. Data are reported separately for men and women, but we summed these numbers. Employment is disaggregated into full-time, parttime, occasional, and unspecified statuses. These categories are defined as full time workers having > 90% of their time or livelihood from fishing/aquaculture, part time workers are between 30-90% time (or 30-90% of their livelihood) and occasional workers are < 30% time. Unspecified status workers could fall anywhere from 0-100% time. Taking the midpoints of those ranges, we assume that 1 part time worker = 0.6 full time workers, 1 occasional worker = 0.15 full time workers, and 1 unspecified worker = 0.5 full time workers, which we used as a weighting scheme for determining total numbers of jobs.  The dataset has significant gaps, but it provides the most comprehensive source of global data on commercial fishing and aquaculture employment.
+Data are from the [OECD (Employment in fisheries, aquaculture, and processing, 2009-2021)](https://data-explorer.oecd.org/vis?fs[0]=Topic%2C1%7CAgriculture%20and%20fisheries%23AGR%23%7CFisheries%20and%20aquaculture%23AGR_FSA%23&pg=0&fc=Topic&bp=true&snb=6&vw=ov&df[ds]=dsDisseminateFinalDMZ&df[id]=DSD_FISH_EMP%40DF_FISH_EMPL&df[ag]=OECD.TAD.ARP&df[vs]=1.0&dq=.A...._T._T&pd=2009%2C&to[TIME_PERIOD]=false&ly[cl]=TIME_PERIOD&ly[rs]=REF_AREA&ly[rw]=DOMAIN) [@organisation_for_economic_co-operation_and_development_oecd_employment_2025]. The data are filtered for the number of people working in the marine and subsistence fishing sectors. The OECD data are supplemented with additional data from the table on pg. 169 of the [FAO Yearbook 2021](https://openknowledge.fao.org/server/api/core/bitstreams/2be6c2fa-07b1-429d-91c5-80d3d1af46a6/content) [@food_and_agriculture_organization_of_the_united_nations_fishery_2024] and [ILOSTAT](https://rshiny.ilo.org/dataexplorer46/?lang=en&id=EAR_4MTH_SEX_ECO_CUR_NB_A) for "Rev 3.1.B: Fishing" [@international_labour_organization_employment_2025].
 
 #### Mariculture
-We used the FAO Global Number of Fishers dataset (see commercial fishing above for full description) to estimate jobs for mariculture. For this sector, we used data in the aquatic-life cultivation category. Again, employment is disaggregated into full-time, part-time, occasional, and unspecified statuses and we implement a weighting scheme where full time = 1 job, part-time = 0.6, occasional = 0.15, and unspecified = 0.5. Aquatic-life cultivation includes marine, brackish and freshwater aquaculture. In order to estimate the proportion of total aquaculture jobs that can be attributed to marine and brackish aquaculture, we used country-specific proportions of marine and brackish aquaculture revenues (compared to total revenues) calculated from FAO aquaculture production data, assuming that numbers of jobs approximately scale with production in terms of revenue. For country-years with no data for the proportion of marine/brackish production because of gaps in the FAO production data, we used the proportion from the most recent year for which data were available. For countries without proportion estimates from any years, we used the average proportion from the country’s geographic region (e.g., Caribbean, Polynesia, Eastern Asia), with the exception of American Samoa, for which we used the proportion value from Guam.
+Data are from the [OECD (Employment in fisheries, aquaculture, and processing, 2009-2021)](https://data-explorer.oecd.org/vis?df[ds]=DisseminateFinalDMZ&df[id]=DSD_SOE%40DF_SOE&df[ag]=OECD.ENV.EPI&dq=.A....&pd=1995%2C2024&to[TIME_PERIOD]=false&vw=tb) [@organisation_for_economic_co-operation_and_development_oecd_sustainable_2025]. The data are filtered for "People employed in aquaculture sector." The OECD data are supplemented with additional data from the table on pg. 170 of the [FAO Yearbook 2021](https://openknowledge.fao.org/server/api/core/bitstreams/2be6c2fa-07b1-429d-91c5-80d3d1af46a6/content) [@food_and_agriculture_organization_of_the_united_nations_fishery_2024]
 
 #### Marine mammal watching
 The International Fund for Animal Welfare’s (IFAW) Whale Division provides time series data on whale watching in more than 115 coastal countries [@oconnor2009whale]. This dataset may be an imperfect representation of all marine mammal watching due to its focus on whales, although it does include data for other types of marine mammal watching (e.g., dolphins). However, to our knowledge, it is the most complete dataset pertaining to the global marine mammal watching industry. We obtained regional averages of the number of whale watchers per employee, as well as the number of whale watchers in each country. Using this information, we estimated the number of whale watching jobs in each country by dividing the country’s total number of whale watchers by the average number of whale watchers per employee for that country’s region (e.g., Africa & Middle East, Europe, North America). It is important to note that data are not annual, but there are at least four years of data for each country.
@@ -1736,7 +1734,7 @@ The Pressure score was calculated as one minus soft-bottom habitat condition.
 
 *Subcategory: fishing pressure*
 
-This data layer describes the pressure on cetaceans and marine turtles for each country calculated using the FAO Global Capture Production Quantity dataset [@unitednations2024]. We extracted all catch records from the FAO data for cetaceans or marine turtles and aggregated to create a total reported catch count for each region. The summed catch was rescaled from 0-1, using the 95th quantile across all years (including and prior to the assessment year) and regions (values > 1 were capped at 1).
+This data layer describes the pressure on cetaceans and marine turtles for each country calculated using the FAO Global Capture Production Quantity dataset [@united_nations_fao_2025-1]. We extracted all catch records from the FAO data for cetaceans or marine turtles and aggregated to create a total reported catch count for each region. The summed catch was rescaled from 0-1, using the 95th quantile across all years (including and prior to the assessment year) and regions (values > 1 were capped at 1).
 
 #### Units {-} 
  scaled 0-1
