--- a/docs/references.bib
+++ b/docs/references.bib
@@ -13441,3 +13441,20 @@ ftp://sidads.colorado.edu/pub/DATASETS/nsidc0051\_gsfc\_nasateam\_seaice/final-g
 	urldate = {2025-07-15},
 	date = {2025-03-27},
 }
+
+@misc{clawson_global_2025,
+	title = {Global Fishing Effort Model Data and Shiny App},
+	url = {https://zenodo.org/records/15758813},
+	doi = {10.5281/zenodo.15758813},
+	abstract = {Global Fishing Effort Mapper Shiny app
+}
+
+
+@misc{organisation_for_economic_co-operation_and_development_oecd_sustainable_2025,
+	title = {Sustainable Ocean Economy},
+	author = {{Organisation for Economic Co-operation and Development (OECD)}},
+	urldate = {2025-09-08},
+	date = {2025-05},
+}
+	
+
