--- a/goals/goal-models-data.qmd
+++ b/goals/goal-models-data.qmd
@@ -150,7 +150,7 @@ where, $C_{k} = C_{c}/C_{r}$ and $N$ is the number of habitats in a region. $C_{
 | Mangroves    | Current hectares divided by reference hectares, for coastal mangroves only                                                                                               | Mangrove extent per oceanic region (vector based)   | Calculated using 5 most recent years of data                                                                                                               |
 | Salt marsh   | All regions assigned condition = 0.75 based on conservative historical extent losses                                                                                     | Salt marsh extent per oceanic region                | All regions assigned trend based on historical .28% global yearly loss                                                                                     |
 | Sea ice edge | Current (3-year rolling-average using the current year and previous 2 years) % cover of sea ice having 10-50% cover, divided by reference % cover average from 1979-2000 | Same as condition                                   | Calculated from the fitted slope of %-deviation-from-reference per year, of the most recent 5 years of data (each year of data is based on 3-year average) |
-| Soft bottom  | Soft-bottom destructive fishing practices relative to area of soft-bottom habitat and rescaled to 0-1 based on relative global values                                    | Halpern et al. [-@halpern2008global]                | Calculated using 5 most recent years of condition data                                                                                                     |
+| Soft bottom  | Soft-bottom destructive fishing practices relative to area of soft-bottom habitat and rescaled to 0-1 based on relative global values                                    | Clawson et al. [-@clawson_global_2025]                | Calculated using 5 most recent years of condition data                                                                                                     |
 | Tidal flat   | Average tidal flat extent of 2010 and 2013 relative to historic extent (average of 1989 and 1992)                                                                        | Tidal flat extent per oceanic region (vector based) | Calculated across data from 2001-2013                                                                                                                      |
 
 A significant amount of pre-processing of the habitat data was needed to fill data gaps and resolve data quality issues (Section 7). Because consistent habitat monitoring data was unavailable for many countries, anomalous values can occur. This is particularly true for highly variable habitats like seagrasses or coral reefs which can have significant site-to-site and year-to-year differences in extent and condition [@bruno_regional_2016]. Biases may also have been introduced from spatial (e.g., protected or impacted sites) and temporal (e.g., directly after a disturbance event) selections in sampling. In regions where we had a limited number of surveys in a particular country, overall status can be under- or overestimated because of these fluctuations.
