Update methods for eco>fis.

--- a/data-layers/data-layer-descriptions.qmd
+++ b/data-layers/data-layer-descriptions.qmd
@@ -472,7 +472,7 @@ This layer includes yearly data for revenue in commercial fishing, aquarium trad
 To approximate revenue from aquarium fishing we used export data from the FAO Global Commodities database for ‘Ornamental fish’ for all available years. We used data from two of the four subcategories listed, excluding the subcategory ‘Fish for culture including ova, fingerlings, etc.’ because it is not specific to ornamental fish, and the subcategory ‘Ornamental freshwater fish’ because it is not from marine systems.
 
 #### Commercial fishing
-Revenue data for commercial fishing were obtained from FAO’s FishStat database, which provides yearly dollar values of commercial fisheries production for marine, brackish and freshwater species starting in 1950 and updated yearly.  To isolate production values attributable to marine and brackish aquaculture, data pertaining to freshwater species were omitted. This species classification process was very time consuming as each species had to be queried individually per year. There was little year-to year variation, and thus data were extracted in 5 year increments, providing data for 1997, 2002 and 2007.
+Revenue data for commercial fishing were obtained from FAO’s FishStat database, which provides yearly dollar values of commercial fisheries production for marine, brackish and freshwater species starting in 1950 and updated yearly.  To isolate production values attributable to marine and brackish aquaculture, data pertaining to freshwater species were omitted. This species classification process was very time consuming as each species had to be queried individually per year. Code from [emLab](https://github.com/SFG-UCSB/price-db-sfg) was incorporated and adapted to calculate ex-vessel prices for each year beyond 2019.
 
 #### Mariculture
 Data on revenues from marine aquaculture were derived from FAO’s FishStat database, which includes country-level data on total production values for marine, brackish, and freshwater species beginning in 1984 and updated yearly. To isolate production values attributable to marine and brackish aquaculture, data pertaining to freshwater species were omitted. This species classification process was very time consuming as each species had to be queried individually per year. There was little year-to year variation, and thus data were extracted in 5 year increments, providing data for 1997, 2002 and 2007.
