--- a/docs/references.bib
+++ b/docs/references.bib
@@ -13446,9 +13446,8 @@ ftp://sidads.colorado.edu/pub/DATASETS/nsidc0051\_gsfc\_nasateam\_seaice/final-g
 	title = {Global Fishing Effort Model Data and Shiny App},
 	url = {https://zenodo.org/records/15758813},
 	doi = {10.5281/zenodo.15758813},
-	abstract = {Global Fishing Effort Mapper Shiny app
+	abstract = {Global Fishing Effort Mapper Shiny app},
 }
-
 
 @misc{organisation_for_economic_co-operation_and_development_oecd_sustainable_2025,
 	title = {Sustainable Ocean Economy},
@@ -13456,5 +13455,4 @@ ftp://sidads.colorado.edu/pub/DATASETS/nsidc0051\_gsfc\_nasateam\_seaice/final-g
 	urldate = {2025-09-08},
 	date = {2025-05},
 }
-	
 
