--- a/references.bib
+++ b/references.bib
@@ -13433,3 +13433,26 @@ ftp://sidads.colorado.edu/pub/DATASETS/nsidc0051\_gsfc\_nasateam\_seaice/final-g
 	author = {Chau, T.T.T. and {Marion Gehlen} and {Frédéric Chevallier}},
 	year = {2022},
 }
+
+@misc{iucn_iucn_2025,
+	title = {The {IUCN} Red List of Threatened Species. Version 2025-1.},
+	url = {http://www.iucnredlist.org/},
+	author = {{IUCN}},
+	urldate = {2025-07-15},
+	date = {2025-03-27},
+}
+
+@misc{clawson_global_2025,
+	title = {Global Fishing Effort Model Data and Shiny App},
+	url = {https://zenodo.org/records/15758813},
+	doi = {10.5281/zenodo.15758813},
+	abstract = {Global Fishing Effort Mapper Shiny app},
+}
+
+@misc{organisation_for_economic_co-operation_and_development_oecd_sustainable_2025,
+	title = {Sustainable Ocean Economy},
+	author = {{Organisation for Economic Co-operation and Development (OECD)}},
+	urldate = {2025-09-08},
+	date = {2025-05},
+}
+
