--- a/references.bib
+++ b/references.bib
@@ -13456,3 +13456,45 @@ ftp://sidads.colorado.edu/pub/DATASETS/nsidc0051\_gsfc\_nasateam\_seaice/final-g
 	date = {2025-05},
 }
 
+@misc{ncei_ncei_2025,
+  title   = {{NCEI} Marine Microplastics},
+  url     = {https://www.ncei.noaa.gov/products/microplastics},
+  author  = {{NCEI}},
+  urldate = {2025-09-09},
+  date    = {2025-07-09},
+}
+
+@misc{allen_coral_atlas_allen_2025,
+  title   = {Allen Coral Atlas 2025 - Reef Extent},
+  url     = {https://allencoralatlas.org/atlas/#5.49/-18.6223/153.0900},
+  author  = {Allen Coral Atlas},
+  urldate = {2025-09-01},
+  date    = {2025-08-24},
+}
+
+@misc{zhang_et_al_gcl_fcs30_2024,
+  title   = {{GCL}\_FCS30: a global coastline dataset with 30m resolution},
+  url     = {https://zenodo.org/records/13943679},
+  author  = {Zhang et al., Li},
+  urldate = {2025-08-14},
+  date    = {2024-10-17},
+}
+
+@misc{luijendijk_et_al_al_gcl_fcs30_2024,
+  title   = {{GCL}\_FCS30: a global coastline dataset with 30m resolution},
+  url     = {https://zenodo.org/records/13943679},
+  author  = {Zhang et al., Li},
+  urldate = {2025-08-14},
+  date    = {2024-10-17},
+}
+
+@article{luijendijk_et_al_state_2018,
+	title = {The State of the World's Beaches},
+	volume = {8},
+	url = {https://www.nature.com/articles/s41598-018-24630-6},
+	doi = {https://doi.org/10.1038/s41598-018-24630-6},
+	journaltitle = {Scientific Reports},
+	author = {Luijendijk et al., Arjen},
+	urldate = {2025-09-01},
+	date = {2018-04-27},
+}
