--- a/references.bib
+++ b/references.bib
@@ -13498,3 +13498,11 @@ ftp://sidads.colorado.edu/pub/DATASETS/nsidc0051\_gsfc\_nasateam\_seaice/final-g
 	urldate = {2025-09-01},
 	date = {2018-04-27},
 }
+
+@report{global_coral_reef_monitoring_network_status_2020,
+	title = {Status of Coral Reefs of the World: 2020},
+	url = {https://gcrmn.net/2020-report/},
+	author = {Global Coral Reef Monitoring Network},
+	urldate = {2025-08-24},
+	date = {2020},
+}
