--- a/references.bib
+++ b/references.bib
@@ -13446,7 +13446,10 @@ ftp://sidads.colorado.edu/pub/DATASETS/nsidc0051\_gsfc\_nasateam\_seaice/final-g
 	title = {Global Fishing Effort Model Data and Shiny App},
 	url = {https://zenodo.org/records/15758813},
 	doi = {10.5281/zenodo.15758813},
-	abstract = {Global Fishing Effort Mapper Shiny app},
+	publisher = {Zenodo},
+	author = {Clawson, Gage and Blanchard, Julia and Novaglio, Camilla},
+	urldate = {2025-08-04},
+	date = {2025-06-27},
 }
 
 @misc{organisation_for_economic_co-operation_and_development_oecd_sustainable_2025,
